fixed issue with tab number (5) being clipped when active

--- a/styles/components/pages/_features.scss
+++ b/styles/components/pages/_features.scss
@@ -618,6 +618,7 @@
               text-align: center;
               color: #fff;
               position: relative;
+              z-index: 10;
               margin: 0;
               &::before {
                 content: "";
